--- a/trenchi-backend/package.json
+++ b/trenchi-backend/package.json
@@ -19,5 +19,8 @@
     "express": "^4.21.2",
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
