feat: Update profile and matching system
- Add gender-based matching logic
- Update profile form structure and validation
- Implement referral system with points
- Add leaderboard functionality
- Update UI components and styling
- Fix form submission handling
- Add delete account functionality

--- a/trenchi-frontend/public/manifest.json
+++ b/trenchi-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Trenchi",
+  "name": "Trenchi - Decentralized Dating on Solana",
   "icons": [
     {
       "src": "favicon.ico",
